fixing broken css
fixing by using id wich have more specificity and will be the final style

--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -17,7 +17,7 @@ body {
   font-size: 22px;
 }
 
-.confirm {
+#confirm-button {    /*fixed using id as it have more specifity*/
   background: green;
   color: white;
   font-weight: bold;
